k8s/api-gateway/sameness/common/source.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: source
  name: source
  namespace: default
spec:
  ports:
  - port: 8080
  selector:
    app: source
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: source
  name: source
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: source
  template:
    metadata:
      labels:
        app: source
      annotations:
        'consul.hashicorp.com/connect-service-upstreams': 'backend.svc:1234'
    spec:
      serviceAccountName: source
      containers:
      - name: source
        image: leodotcloud/swiss-army-knife:latest
        command: ["/bin/sleep", "3650d"]
