k8s/api-gateway/sameness/common/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: default
spec:
  parentRefs:
    - name: api-gateway
  rules: 
    - backendRefs:
      - group: consul.hashicorp.com
        kind: MeshService
        name: frontend
